// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blog no post 1`] = `
<div>
  <styled.div>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
    >
      <title>
        title
         • Blog
      </title>
    </HelmetWrapper>
  </styled.div>
</div>
`;

exports[`blog rendering 1`] = `
<div>
  <styled.div>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
    >
      <title>
        title
         • Blog
      </title>
    </HelmetWrapper>
    <styled.div
      key="id"
    >
      <styled.h3>
        <GatsbyLink
          to="path"
        >
          title
        </GatsbyLink>
      </styled.h3>
      <Image
        Tag="div"
        alt=""
        fadeIn={true}
        sizes={
          Object {
            "sizes": "image",
          }
        }
      />
      <styled.div>
        <small>
          date
        </small>
        <small>
          10
           mins
        </small>
      </styled.div>
      <styled.div>
        excerpt
      </styled.div>
    </styled.div>
  </styled.div>
</div>
`;
